# shoiders

./: CMakeLists.txt  readme.md
res/shaders/: test.glsl  voronoise.glsl
src/: main.cpp
